<?xml version="1.0"?>
<package format="2">
  <name>uw_robocup</name>
  <version>0.1.0</version>
  <description>High-level API for controlling the Fetch robot.</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>trajectory_msgs</depend>
  <export>
  </export>
</package>
